@@ -6,9 +6,7 @@ import com.dvlasenko.app.exceptions.UserException;
 import com.dvlasenko.app.repository.impl.UserRepository;
 import com.dvlasenko.app.utils.UserValidator;
 
-import java.util.List;
-import java.util.Map;
-import java.util.Optional;
+import java.util.*;
 import java.util.concurrent.atomic.AtomicInteger;
 
 public class UserService {
@@ -29,7 +27,7 @@ public class UserService {
         repository.create(new UserMapper().mapData(data));
     }
 
-    public List read() {
+    public List<User> read() {
         Optional<List<User>> optional = repository.read();
         if (optional.isPresent()) {
             List<User> list = optional.get();
@@ -44,7 +42,7 @@ public class UserService {
             }
             return list;
         }
-        return List.of();
+        return Collections.emptyList();
     }
 
     public void update(Map<String, String> data) {
@@ -76,22 +74,11 @@ public class UserService {
     }
 
     public Object readById(Map<String, String> data) {
-        Map<String, String> errors =
-                new UserValidator().validateUserData(data);
-        if (!errors.isEmpty()) {
-            try {
-                throw new UserException("Check inputs", errors);
-            } catch (UserException e) {
-                e.getErrors(errors);
-                return null;
-            }
-        }
         Optional<User> optional =
                 repository.readById(Long.parseLong(data.get("id")));
         if (optional.isPresent()) {
             User user = optional.get();
-            user.toString();
-            return user;
+            return user.toString();
         }
         return null;
     }
